--- a/7.css
+++ b/7.css
@@ -1,4 +1,7 @@
-       button:hover{
+       .placeicon{
+	       font-family:fontawesome;
+        }
+        button:hover{
        	color: #e6e6e6;
        	background-color: black;
        }
@@ -153,6 +156,9 @@
 		}
 
 		@media only screen and (min-width: 320px) and (max-width: 767px){
+			.placeicon{
+	       font-family:fontawesome;
+        }
 			       button:hover{
        	color: #e6e6e6;
        	background-color: black;
@@ -301,6 +307,9 @@
 		}
 		}
 		@media only screen and (min-width: 768px) and (max-width: 1023px){
+			.placeicon{
+	       font-family:fontawesome;
+        }
 		       button:hover{
        	color: #e6e6e6;
        	background-color: black;
