--- a/7.css
+++ b/7.css
@@ -1,5 +1,6 @@
        .placeicon{
 	       font-family:fontawesome;
+	       padding:2%;
         }
         button:hover{
        	color: #e6e6e6;
@@ -158,6 +159,7 @@
 		@media only screen and (min-width: 320px) and (max-width: 767px){
 			.placeicon{
 	       font-family:fontawesome;
+				 padding:2%;
         }
 			       button:hover{
        	color: #e6e6e6;
@@ -309,6 +311,7 @@
 		@media only screen and (min-width: 768px) and (max-width: 1023px){
 			.placeicon{
 	       font-family:fontawesome;
+				 padding:2%;
         }
 		       button:hover{
        	color: #e6e6e6;
