--- a/7.css
+++ b/7.css
@@ -32,6 +32,7 @@
         }
         #mes{
         	padding-bottom: 20%;
+		margin-left:1%;
         }
          footer{
         	color: #ccc;
@@ -194,6 +195,7 @@
         }
         #mes{
         	padding-bottom: 20%;
+		margin-left:1%;
         }
 		footer{
         	color: #ccc;
@@ -349,6 +351,7 @@
         }
         #mes{
         	padding-bottom: 20%;
+		margin-left:1%;
         }
 		footer{
         	color: #ccc;
